Issue-19 Refactor gateways, and fix bug with personal contacts not saving

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
 
 .DS_Store
+Safety Plan.xcodeproj/xcuserdata/*
+Safety Plan.xcworkspace/contents.xcworkspacedata
+Safety Plan.xcworkspace/xcuserdata/*
