--- a/SafetyPlan/Info.plist
+++ b/SafetyPlan/Info.plist
@@ -26,11 +26,8 @@
 	<string>comgooglemaps</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
-	<key>UILaunchScreen</key>
-	<dict>
-		<key>UIColorName</key>
-		<string>systemBackground</string>
-	</dict>
+	<key>UILaunchStoryboardName</key>
+	<string>safetyplanlaunch</string>
 	<key>UIMainStoryboardFile</key>
 	<string>safetyplanlayout</string>
 	<key>UIRequiredDeviceCapabilities</key>
